# football

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  ippo_nominal.yaml  mappo_failure_dr.yaml  mappo_nominal.yaml  mappo_uniform_dr.yaml  phase3_base.yaml  phase3_cc_fdr.yaml  phase3_recurrent_nominal.yaml  phase3_smoke.yaml  phase3_stage_r.yaml  smoke_test.yaml
notebooks/: phase1_environment_and_baselines.ipynb  phase2_training_transfer_report.ipynb  phase3_adversarial_teamplay.ipynb
reports/: generated_results.tex  main.tex  phase2_confirmatory_summary.json  phase3_development_summary.json  references.bib  surrogate_notes.tex
robosoccer/: __init__.py  artifacts.py  config.py  diagnostics.py  environment.py  evaluation.py  phase3.py  recurrent.py  training.py  utils.py
scripts/: __init__.py  audit_action_delay.py  audit_workspace.py  benchmark_throughput.py  calibrate_phase3.py  compare_runs.py  evaluate.py  evaluate_baselines.py  evaluate_phase3.py  evaluate_phase3_gates.py  export_phase2_report.py  record_phase3_video.py  record_video.py  sync_drive_artifacts.py  trace_action_delays.py  train.py
tests/: test_core.py  test_phase3.py
webots/: README.md
