[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robosoccer-transfer"
version = "0.1.0"
description = "Failure-directed domain randomization for multi-fidelity robot soccer"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
dependencies = [
  "torch==2.7.1",
  "numpy==2.2.6",
  "gymnasium==1.2.1",
  "pettingzoo==1.26.1",
  "pymunk==7.3.0",
  "PyYAML==6.0.3",
  "pandas==2.3.3",
  "matplotlib==3.10.7",
  "tqdm==4.67.1",
  "tensorboard==2.20.0",
  "Pillow==12.0.0",
  "imageio==2.37.2",
  "imageio-ffmpeg==0.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "ruff==0.14.5",
]

[tool.setuptools.packages.find]
include = ["robosoccer*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks", "runs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501", "RUF012"]
